--- a/index_with_chart.html
+++ b/index_with_chart.html
@@ -498,6 +498,7 @@ C4:7C:8D:6B:04:52 #extérieur<br/>
 	  // parcours de l'histo
 	  if (nb_histo!=0) {
 			for(var i=0;i<nb_histo;i++) {
+				try {
 				//calcul adresse
 				//addr=b'\xa1' + i.to_bytes(2, _BYTE_ORDER)
 				var addr = new ArrayBuffer(3);
@@ -536,8 +537,26 @@ C4:7C:8D:6B:04:52 #extérieur<br/>
 				donnee_lum[i]=retour[2];
 				donnee_fer[i]=retour[3];
 				
-				// tempo ?
-				//await new Promise(r => setTimeout(r, 200));
+				}
+				catch(e) {
+					log(i+'-erreur:'+e);
+					// tempo
+					await new Promise(r => setTimeout(r, 2000));
+					log('fin tempo');
+					// reco
+					server=await device.gatt.connect();
+					log('reco ok');
+					service= await server.getPrimaryService(SERVICE_UUID_TIME);
+					log('service ok');
+					characteristic= await service.getCharacteristic(CHARACTERISTIC_UUID_HISTO_ACTIVATE);
+					var CMD_HIST_TIME_READ_INIT = new ArrayBuffer(3);
+					var view = new DataView(CMD_HIST_TIME_READ_INIT);
+					view.setUint8(0,160);
+					await characteristic.writeValue(CMD_HIST_TIME_READ_INIT);	
+					log('write ok')					;
+					i--; // pour repartir sur la même ligne
+				}
+
 			}
 	  }
 	  
