--- a/index_with_chart.html
+++ b/index_with_chart.html
@@ -132,7 +132,7 @@ C4:7C:8D:6B:04:52 #extérieur<br/>
 		  interpolateNulls: true,
 		  curveType: 'function',
 		  hAxis: {
-            format: 'dd/MM/yyyy'			
+            format: 'dd/MM/yyyy HH:mm'			
 		  },
 		  vAxis: {
 			format: '#.# \u00b0C'
