--- a/index_with_chart.html
+++ b/index_with_chart.html
@@ -548,7 +548,7 @@ C4:7C:8D:6B:04:52 #extérieur<br/>
 				//display
 				tps = new Date();
 				tps.setTime((epoch_time+retour[4])*1000);
-				//log(i+':'+dte_format(tps)+';Température: '+retour[0] +'°C;Humidité: '+retour[1] +'%;Luminosité: '+retour[2] +' lux;Conductivité: '+retour[3]+' µS/cm');
+				log(i+':'+dte_format(tps)+';Température: '+retour[0] +'°C;Humidité: '+retour[1] +'%;Luminosité: '+retour[2] +' lux;Conductivité: '+retour[3]+' µS/cm');
 				
 				donnee_date[i]=tps;
 				donnee_temp[i]=retour[0];
